force-app/main/default/objects/Contact_Email_Match__c/Contact_Email_Match__c.object-meta.xml
<CustomObject>
    <description>Audited, sender-address-free Email-to-Case suggestions and outcomes.</description>
    <label>Contact Email Match</label>
    <nameField>
        <displayFormat>CEM-{000000}</displayFormat>
        <label>Contact Email Match Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Email Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>