force-app/main/default/objects/Contact_Email_Match__c/fields/Candidate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Contact__c</fullName>
    <label>Candidate Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Candidate Contact Matches</relationshipLabel>
    <relationshipName>Candidate_Contact_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>