force-app/main/default/objects/Contact_Email_Match__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Contact Email Matches</relationshipLabel>
    <relationshipName>Contact_Email_Matches</relationshipName>
    <type>MasterDetail</type>
</CustomField>