force-app/main/default/objects/Contact_Email_Match__c/fields/Confirmed_At__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_At__c</fullName>
    <label>Confirmed At</label>
    <type>DateTime</type>
</CustomField>