force-app/main/default/objects/Contact_Email_Match__c/fields/Confirmed_By__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_By__c</fullName>
    <label>Confirmed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Confirmed Contact Email Matches</relationshipLabel>
    <relationshipName>Confirmed_Contact_Email_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>