force-app/main/default/objects/Contact_Email_Match__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <label>Matched Contact Email</label>
    <referenceTo>Contact_Email__c</referenceTo>
    <relationshipLabel>Match Audit Records</relationshipLabel>
    <relationshipName>Contact_Email_Match_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>