force-app/main/default/objects/Contact_Email_Match__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Sanitized Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>