force-app/main/default/objects/Contact_Email_Match__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>UNIQUE_MATCH</fullName><default>true</default><label>Unique match</label></value>
            <value><fullName>AMBIGUOUS_MATCH</fullName><default>false</default><label>Ambiguous match</label></value>
            <value><fullName>EXISTING_CONTACT</fullName><default>false</default><label>Case already has Contact</label></value>
            <value><fullName>UPDATE_FAILED</fullName><default>false</default><label>Case update failed</label></value>
            <value><fullName>USER_CONFIRMED</fullName><default>false</default><label>User confirmed</label></value>
            <value><fullName>USER_REJECTED</fullName><default>false</default><label>User rejected</label></value>
            <value><fullName>VERIFICATION_REQUIRED</fullName><default>false</default><label>Verification required</label></value>
            <value><fullName>ACCESS_DENIED</fullName><default>false</default><label>Access denied</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>