force-app/main/default/objects/Contact_Email_Match__c/fields/Source_Email_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Email_Message_Id__c</fullName>
    <description>Source EmailMessage ID; unique for idempotent retries.</description>
    <externalId>true</externalId>
    <label>Source EmailMessage ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>