force-app/main/default/objects/Contact_Email_Match__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Suggested</fullName><default>true</default><label>Suggested</label></value>
            <value><fullName>Confirmed</fullName><default>false</default><label>Confirmed</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>AutoLinked</fullName><default>false</default><label>Auto-linked</label></value>
            <value><fullName>Ambiguous</fullName><default>false</default><label>Ambiguous</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>Superseded</fullName><default>false</default><label>Superseded</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>